...
        w="full"
        colorScheme="green"
        gap="2"
        onClick={() => setActiveDialog("complete")}
      >
        <CheckCircle2 className="h-4 w-4" />
        Concluir Chamado
      </Button>

      <Button 
        variant="solid"
        colorScheme="gray"
        w="full"
...
